# SpectraBandForge

./: .gitignore  CMakeLists.txt
src/: BandDefinitions.hpp  BandFilter.hpp  FrequencyCalculator.hpp  Unused.hpp
test/: CMakeLists.txt  FrequencyBandTest.cpp
test/FrequencyAnalysisTest/: .clang-format  BeeperWithCallback.cpp  BeeperWithCallback.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Resources.qrc  SineGenerator.cpp  SineGenerator.hpp  main.cpp
test/FrequencyAnalysisTest/CMakeModules/: FindIIR.cmake
test/FrequencyBandTest/: CMakeLists.txt
